syntax = "proto3";

package ProtobufNrtAnnotator.Tests.Protos;

import "google/protobuf/any.proto";

message AnyMessage {
  google.protobuf.Any any_value = 1;
  repeated google.protobuf.Any repeated_any = 2;
  map<string, google.protobuf.Any> map_any = 3;
}
