syntax = "proto3";

package ProtobufNrtAnnotator.Tests.Protos;

import "google/protobuf/wrappers.proto";

message ComplexMessage {
  // Standard field
  string name = 1;

  // Oneof field
  oneof contact_info {
    string email = 2;
    string phone = 3;
    int32 fax = 4; // Value type
  }

  // Repeated fields
  repeated string tags = 5;
  repeated int32 scores = 6;
  repeated google.protobuf.StringValue notes = 7;

  // Map fields
  map<string, string> attributes = 8;
  map<int32, ComplexMessage> children = 9;
  
  // Nested message
  NestedMessage nested = 10;
}

message NestedMessage {
  string description = 1;
}
