syntax = "proto2";

package ProtobufNrtAnnotator.Tests.Protos;

message BaseMessage {
  optional int32 id = 1;
  extensions 100 to 199;
}

extend BaseMessage {
  optional int32 extended_int = 100;
  optional string extended_string = 101;
}

message ExtensionsMessage {
  optional BaseMessage base = 1;
}
