syntax = "proto3";

package ProtobufNrtAnnotator.Tests.Protos;

message SimpleMessage {
  string name = 1;
  int32 id = 2;
  bool is_active = 3;
  bytes content = 4;
}
